Downgrade Java 21 to 17 for Railway Nixpacks compat; replace getFirst() with get(0)